--- a/styles/style-sheet.css
+++ b/styles/style-sheet.css
@@ -1,4 +1,3 @@
-
 .banner-container {
     margin: -1%;
 
@@ -9,7 +8,7 @@
     width: 100%;
 }
 
-.top-left-icon{
+.top-left-icon {
     /* position: absolute; */
     width: 80px;
     height: 80px;
@@ -18,7 +17,7 @@
 }
 
 
-.tl-icon-container{
+.tl-icon-container {
     margin-left: 7%;
     align-items: flex-start;
 }
@@ -50,7 +49,7 @@
     /* background-color: blue; */
 }
 
-.header-menu-item{
+.header-menu-item {
     font-size: 18px;
     font-weight: bold;
     color: white;
@@ -60,25 +59,25 @@
     text-overflow: clip;
 }
 
-.hmi-container{
+.hmi-container {
     text-align: center;
     display: inline-block;
     margin-left: 10px;
     margin-right: 10px;
 }
 
-td{
+td {
     width: 100px;
 }
 
-.text-button{
+.text-button {
     font-size: 16px;
     color: white;
     font-family: DejaVu Sans Mono, monospace;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: clip;
-    background-color: rgba(37,226,0,255);
+    background-color: rgba(37, 226, 0, 255);
     padding: 10px;
     padding-left: 15px;
     padding-right: 15px;
@@ -105,6 +104,7 @@ td{
     font-family: DejaVu Sans Mono, monospace;
     color: white;
 }
+
 .banner-title-2 {
     font-size: 60px;
     font-weight: bold;
@@ -113,9 +113,50 @@ td{
 }
 
 .banner-info {
-    
+
     font-size: 30px;
     color: white;
+    font-family: DejaVu Sans Mono, monospace;
+
+}
+
+.stats-container {
+    display: flexbox;
+    margin-top: 5%;
+    height: auto;
+    width: 100%;
+}
+
+.stats-left {
+    display: inline-block;
+    width: 40%;
+}
+
+.stats-mid {
+    display: inline-block;
+    width: 30%;
+    vertical-align: top;
+}
+
+.stats-right {
+    display: inline-block;
+    width: 20%;
+    vertical-align: top;
+}
+
+.stats {
+    font-size: 80px;
+    color: rgba(37, 226, 0, 255);
+    text-align: center;
+    font-family: DejaVu Sans Mono, monospace;
+    font-weight: bold;
+    
+}
+
+.stats-info {
+    font-size: 26px;
+    text-align: center;
+    font-weight: bold;
     font-family: DejaVu Sans Mono, monospace;
 
 }
