--- a/styles/style-sheet.css
+++ b/styles/style-sheet.css
@@ -121,7 +121,6 @@ td {
 }
 
 .stats-container {
-    display: flexbox;
     margin-top: 5%;
     height: auto;
     width: 100%;
@@ -159,4 +158,60 @@ td {
     font-weight: bold;
     font-family: DejaVu Sans Mono, monospace;
 
+}
+
+.part-3 {
+    width: 100%;
+    margin: 5%;
+}
+
+.part-3-image-container {
+    display: inline-block;
+    width: 50%;
+    height: auto;
+}
+
+.part-3-image {
+    height: auto;
+    width: 90%;
+}
+
+.part-3-data-container{
+    display: inline-block;
+    vertical-align: top;
+    width: 40%;
+
+}
+
+.part-3-title-1 {
+    font-size: 60px;
+    text-align: start;
+    font-family: DejaVu Sans Mono, monospace;
+    
+}
+.part-3-title-2 {
+    font-size: 60px;
+    text-align: start;
+    font-weight: bold;
+    font-family: DejaVu Sans Mono, monospace;
+}
+
+.part-3-data {
+    font-size: 25px;
+    text-align: start;
+    font-weight: bold;
+    font-family: DejaVu Sans Mono, monospace;
+    /* width: 10%; */
+    margin-top: 50px;
+    margin-left: 25px;
+    margin-bottom: 30px;
+
+}
+
+.part-3-link {
+    color: rgba(37, 226, 0, 255);
+    font-size: 25px;
+    margin-left: 25px;
+    font-family: DejaVu Sans Mono, monospace;
+    
 }
