--- a/styles/style-sheet.css
+++ b/styles/style-sheet.css
@@ -1,5 +1,5 @@
 .banner-container {
-    margin: -1%;
+    /* margin: -1%; */
 
 }
 
@@ -353,3 +353,133 @@ td {
 }
 
 
+.part-9 {
+    
+    padding-top: 50px;
+    text-align: center;
+    height: auto;
+    width: 100%;
+}
+
+.part-9-title{
+    
+    font-size: 50px;
+    font-weight: bold;
+    text-align: center;
+    font-family: DejaVu Sans Mono, monospace;
+    margin-bottom: 40px;
+    margin-top: 40px;
+
+}
+
+
+.part-9-image{
+    width: 80%;
+    margin-top: 20px;
+}
+
+
+.part-10 {
+    padding-top: 50px;
+    text-align: center;
+    height: auto;
+    width: 100%;
+}
+
+.part-10-icon {
+    margin-top: 20px;
+    width: 24%;
+    height: auto;
+    margin-bottom: 30px;
+    
+}
+
+.part-11 {
+    padding-top: 50px;
+    text-align: center;
+    height: auto;
+    width: 100%;
+    background-color: rgba(230,230,230,255);
+    padding-bottom: 100px;
+}
+
+.part-11-1 {
+    font-size: 50px;
+    font-weight: bold;
+    text-align: center;
+    font-family: DejaVu Sans Mono, monospace;
+    margin-bottom: 40px;
+    margin-top: 40px;
+
+
+}
+
+.part-11-2 {
+    font-size: 50px;
+    text-align: center;
+    font-family: DejaVu Sans Mono, monospace;
+    margin-bottom: 40px;
+    margin-top: 40px;
+
+}
+
+.sub-button {
+    font-size: 22px;
+    height: 55px;
+    width: 140px;
+    font-weight: bold;
+    color: white;
+    background-color: black;
+    border-radius: 5px;
+}
+
+.footer-part {
+    padding-top: 40px;
+    width: 100%;
+    display: inline-block;
+    background-color: black;
+    /* height: 150px; */
+    padding-bottom: 40px;
+    vertical-align: middle;
+}
+
+
+.footer-link {
+    color: rgba(37, 226, 0, 255);
+    font-size: 20px;
+}
+
+.footer-crc {
+    font-size: 20px;
+    font-family: DejaVu Sans Mono, monospace;
+    color: white;
+
+}
+
+.footer-left {
+    text-align: center;
+    display: inline-block;
+    width: 20%;
+    vertical-align: top;
+}
+
+.footer-mid {
+    text-align: center;
+    display: inline-block;
+    width: 60%;
+    vertical-align: top;
+}
+
+.footer-right {
+    display: inline-block;
+    width: auto;
+    right: 50px;
+    vertical-align: top;
+    text-align: right;
+}
+
+
+.footer-icons {
+    display: flex;
+    width: 100%;
+}
