--- a/styles/style-sheet.css
+++ b/styles/style-sheet.css
@@ -330,12 +330,12 @@ td {
 
 }
 
-.part-7 {
+.quote-part {
     width: 100%;
     text-align: center;
 }
 
-.part-7-image{
+.quote-part-image{
     
     margin-top: 20px;
     width: 55%;
@@ -558,20 +558,10 @@ td {
       }
 
 
-
-
-
-
-
-
-
     }
 
 
-
-
 @media (max-width: 900px) {
-
 
 
 
